force-app/main/default/objects/Filing__c/fields/IsexamokayComments__c.field-meta.xml
<CustomField>
    <fullName>IsexamokayComments__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <label>Is exam okay? - Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>