force-app/main/default/objects/Filing__c/fields/LiabilitiesExceedAssets__c.field-meta.xml
<CustomField>
    <fullName>LiabilitiesExceedAssets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Do current liabilities exceed current assets, if not a deferral of fees required.</inlineHelpText>
    <label>Liabilities Exceed Assets?</label>
    <type>Checkbox</type>
</CustomField>