force-app/main/default/objects/Filing__c/fields/Lienover1000000__c.field-meta.xml
<CustomField>
    <fullName>Lienover1000000__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Is Lien over $10,000.00?</inlineHelpText>
    <label>Lien over $10,000.00?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>