force-app/main/default/objects/Filing__c/fields/MeetsAddlNWRequirement__c.field-meta.xml
<CustomField>
    <fullName>MeetsAddlNWRequirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Meets additional Net Worth Requirement.</inlineHelpText>
    <label>Meets Add&apos;l NW Requirement</label>
    <type>Checkbox</type>
</CustomField>