force-app/main/default/objects/Filing__c/fields/MinimumNetWorth5k__c.field-meta.xml
<CustomField>
    <fullName>MinimumNetWorth5k__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Minimum Net Worth of $5000 at all times. 16-39-433(a)</inlineHelpText>
    <label>Minimum Net Worth $5k</label>
    <type>Checkbox</type>
</CustomField>