force-app/main/default/objects/Filing__c/fields/MinimumNetWorthRequirement__c.field-meta.xml
<CustomField>
    <fullName>MinimumNetWorthRequirement__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Minimum Net Worth requirement based on the selection above.</inlineHelpText>
    <label>Minimum Net Worth Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>