force-app/main/default/objects/Filing__c/fields/MinimumNumberSecurities__c.field-meta.xml
<CustomField>
    <fullName>MinimumNumberSecurities__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Minimum Number Securities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>