force-app/main/default/objects/Filing__c/fields/Monthenddate__c.field-meta.xml
<CustomField>
    <fullName>Monthenddate__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Month end date</label>
    <type>Date</type>
</CustomField>