force-app/main/default/objects/Filing__c/fields/MustProvideAuditedFinancialStatements__c.field-meta.xml
<CustomField>
    <fullName>MustProvideAuditedFinancialStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Applicant has been engaged in business one year or more, then must provide AUDITED Financial Statements as of the last fiscal year by independent accountant. 16-39-435(b)(3)</inlineHelpText>
    <label>Must Provide Audited Financial Statement</label>
    <type>Checkbox</type>
</CustomField>