force-app/main/default/objects/Filing__c/fields/MustProvideFinancialStatements__c.field-meta.xml
<CustomField>
    <fullName>MustProvideFinancialStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Applicant has been engaged in business one year or more, then must provide Financial Statements as of the last fiscal year verified by a duly authorized officer and notarized. 16-39-435(b)(3)</inlineHelpText>
    <label>Must Provide Financial Statements</label>
    <type>Checkbox</type>
</CustomField>