force-app/main/default/objects/Filing__c/fields/NameofFranchiseOffering__c.field-meta.xml
<CustomField>
    <fullName>NameofFranchiseOffering__c</fullName>
    <label>Name of Franchise Offering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>