force-app/main/default/objects/Filing__c/fields/NameofFund__c.field-meta.xml
<CustomField>
    <fullName>NameofFund__c</fullName>
    <description>PacPoint - RA123118 - BREG Phase 1</description>
    <label>Name of Fund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>