force-app/main/default/objects/Filing__c/fields/NameofIssuer__c.field-meta.xml
<CustomField>
    <fullName>NameofIssuer__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Name of Issuer</label>
    <type>TextArea</type>
</CustomField>