force-app/main/default/objects/Filing__c/fields/NetWorthDeficiency__c.field-meta.xml
<CustomField>
    <fullName>NetWorthDeficiency__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Net Worth deficiency based on the selection above.</inlineHelpText>
    <label>Net Worth Deficiency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>