force-app/main/default/objects/Filing__c/fields/Noassignmentwithoutconsent__c.field-meta.xml
<CustomField>
    <fullName>Noassignmentwithoutconsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>No assignment without the consent of the other party to the contract.</inlineHelpText>
    <label>No assignment without consent</label>
    <type>Checkbox</type>
</CustomField>