force-app/main/default/objects/Filing__c/fields/Nohedgeclause__c.field-meta.xml
<CustomField>
    <fullName>Nohedgeclause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>No hedge clause.</inlineHelpText>
    <label>No hedge clause.</label>
    <type>Checkbox</type>
</CustomField>