force-app/main/default/objects/Filing__c/fields/Notcompensatedoncapgainsorassets__c.field-meta.xml
<CustomField>
    <fullName>Notcompensatedoncapgainsorassets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Will not be compensated on the basis of a share of capital gains or appreciation of the account assets.</inlineHelpText>
    <label>Not compensated on cap gains or assets</label>
    <type>Checkbox</type>
</CustomField>