force-app/main/default/objects/Filing__c/fields/Noticefilingwithin15days__c.field-meta.xml
<CustomField>
    <fullName>Noticefilingwithin15days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Notice filing within 15 days after first sale in state.</inlineHelpText>
    <label>Notice filing within 15 days</label>
    <type>Checkbox</type>
</CustomField>