force-app/main/default/objects/Filing__c/fields/Notifyofchangeinmembership__c.field-meta.xml
<CustomField>
    <fullName>Notifyofchangeinmembership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>If adviser is a partnership, will notify the other party to contract of any change in membership.</inlineHelpText>
    <label>Notify of change in membership</label>
    <type>Checkbox</type>
</CustomField>