force-app/main/default/objects/Filing__c/fields/Occurrence3__c.field-meta.xml
<CustomField>
    <fullName>Occurrence3__c</fullName>
    <description>PacPoint-RA012419-BREG Phase 1</description>
    <label>Occurrence - 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Civil Judicial Action</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Judgment/ Lien</fullName>
            </value>
            <value>
                <fullName>Regulatory Action</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>