force-app/main/default/objects/Filing__c/fields/OccurrenceNumber2__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceNumber2__c</fullName>
    <description>PacPoint-RA012419-BREG Phase 1</description>
    <label>Occurrence Number - 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>