force-app/main/default/objects/Filing__c/fields/OnlineServicesProvided__c.field-meta.xml
<CustomField>
    <fullName>OnlineServicesProvided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <inlineHelpText>On-line, internet or other electronic services to be provided. Require description of services.</inlineHelpText>
    <label>Online Services Provided?</label>
    <type>Checkbox</type>
</CustomField>