force-app/main/default/objects/Filing__c/fields/OoSBondingRequirementsComments__c.field-meta.xml
<CustomField>
    <fullName>OoSBondingRequirementsComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Out of State (OoS) Bonding Requirements Comments</inlineHelpText>
    <label>OoS Bonding Requirements Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>