force-app/main/default/objects/Filing__c/fields/OoSFinancialRequirementsComments__c.field-meta.xml
<CustomField>
    <fullName>OoSFinancialRequirementsComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Out of State (OoS) Financial Requirements Comments</inlineHelpText>
    <label>OoS Financial Requirements Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>