force-app/main/default/objects/Filing__c/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <description>PacPoint-RA012319-BREG Phase 1</description>
    <label>Organization Name</label>
    <type>TextArea</type>
</CustomField>