force-app/main/default/objects/Filing__c/fields/OtherComments__c.field-meta.xml
<CustomField>
    <fullName>OtherComments__c</fullName>
    <description>PacPoint-PH032219 - Created for BREG phase 1. Created for Filings Checklist Updates</description>
    <label>Other Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>