force-app/main/default/objects/Filing__c/fields/OtherTypeofSecurityBeingOffered__c.field-meta.xml
<CustomField>
    <fullName>OtherTypeofSecurityBeingOffered__c</fullName>
    <description>PacPoint - RA010218 - BREG Phase 1</description>
    <label>Other-Type of Security Being Offered</label>
    <type>TextArea</type>
</CustomField>