force-app/main/default/objects/Filing__c/fields/ParentFiling__c.field-meta.xml
<CustomField>
    <fullName>ParentFiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <label>Parent Filing</label>
    <referenceTo>Filing__c</referenceTo>
    <relationshipLabel>Filings</relationshipLabel>
    <relationshipName>Filings</relationshipName>
    <type>Lookup</type>
</CustomField>