force-app/main/default/objects/Filing__c/fields/ParentFilingStatus__c.field-meta.xml
<CustomField>
    <fullName>ParentFilingStatus__c</fullName>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <formula>TEXT( ParentFiling__r.Status__c )</formula>
    <label>Parent Filing Status</label>
    <type>Text</type>
</CustomField>