force-app/main/default/objects/Filing__c/fields/PaymentCompleted__c.field-meta.xml
<CustomField>
    <fullName>PaymentCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <label>Payment Completed?</label>
    <type>Checkbox</type>
</CustomField>