force-app/main/default/objects/Filing__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <description>PacPoint-RA012419-BREG Phase 1</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>