force-app/main/default/objects/Filing__c/fields/Placeofbusinessotherstate__c.field-meta.xml
<CustomField>
    <fullName>Placeofbusinessotherstate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Principal place of business in other state - Maintain min Net Worth as required by the other state in which IA maintains its principal place of business. 16-39-433(j)</inlineHelpText>
    <label>Place of business - other state</label>
    <type>Checkbox</type>
</CustomField>