force-app/main/default/objects/Filing__c/fields/PortfolioName__c.field-meta.xml
<CustomField>
    <fullName>PortfolioName__c</fullName>
    <description>PacPoint - RA123118 - BREG Phase 1</description>
    <label>Portfolio Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>