force-app/main/default/objects/Filing__c/fields/PositiveEquity__c.field-meta.xml
<CustomField>
    <fullName>PositiveEquity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Is there positive equity, if not a deferral of fees required.</inlineHelpText>
    <label>Positive Equity</label>
    <type>Checkbox</type>
</CustomField>