force-app/main/default/objects/Filing__c/fields/PrimaryBusinessName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryBusinessName__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <inlineHelpText>Name under which applicant primarily conduct its advisory business.</inlineHelpText>
    <label>Primary Business Name</label>
    <type>TextArea</type>
</CustomField>