force-app/main/default/objects/Filing__c/fields/PrivacyPolicyStatement__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicyStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Submit the privacy policy that will be distributed to clients.</inlineHelpText>
    <label>Privacy Policy Statement</label>
    <type>Checkbox</type>
</CustomField>