force-app/main/default/objects/Filing__c/fields/ProductTypeTypeofFiling__c.field-meta.xml
<CustomField>
    <fullName>ProductTypeTypeofFiling__c</fullName>
    <description>PacPoint-IC100818 - Created for BREG phase 1
PacPoint - RA122718 - Updated for BREG phase 1</description>
    <label>Product Type/ Type of Filing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open-end Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Closed-end Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Unit Investment Trust</fullName>
            </value>
            <value>
                <fullName>Exemption Filing</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Sales Report</fullName>
            </value>
            <value>
                <fullName>Increased Dollar Amount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>