force-app/main/default/objects/Filing__c/fields/Prospectus__c.field-meta.xml
<CustomField>
    <fullName>Prospectus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Prospectus?</label>
    <type>Checkbox</type>
</CustomField>