force-app/main/default/objects/Filing__c/fields/ReceiptofADVII__c.field-meta.xml
<CustomField>
    <fullName>ReceiptofADVII__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Acknowledgement of receipt of ADV-II.</inlineHelpText>
    <label>Receipt of ADV-II</label>
    <type>Checkbox</type>
</CustomField>