force-app/main/default/objects/Filing__c/fields/RecordationDate__c.field-meta.xml
<CustomField>
    <fullName>RecordationDate__c</fullName>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <label>Recordation Date</label>
    <type>DateTime</type>
</CustomField>