force-app/main/default/objects/Filing__c/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <description>PacPoint-JB111918 - Created for BREG phase 1. Used in Flows</description>
    <formula>RecordType.DeveloperName</formula>
    <label>RecordTypeDeveloperName</label>
    <type>Text</type>
</CustomField>