force-app/main/default/objects/Filing__c/fields/RegD506__c.field-meta.xml
<CustomField>
    <fullName>RegD506__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>RegD506?</label>
    <type>Checkbox</type>
</CustomField>