force-app/main/default/objects/Filing__c/fields/RegisteredandInCompliance__c.field-meta.xml
<CustomField>
    <fullName>RegisteredandInCompliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Adviser is registered in the other state and is in compliance with the other state&apos;s financial reporting requirements, IF ANY, then must provide a copy of adviser&apos;s most recent financial statement filed with the state where the adviser maintains its princ</inlineHelpText>
    <label>Registered and In Compliance</label>
    <type>Checkbox</type>
</CustomField>