force-app/main/default/objects/Filing__c/fields/RegisteredinStateofHawaii_before__c.field-meta.xml
<CustomField>
    <fullName>RegisteredinStateofHawaii_before__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Was the salesperson registered in the State of Hawaii before?</inlineHelpText>
    <label>Registered in State of Hawaii before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>