force-app/main/default/objects/Filing__c/fields/RegisteredinStateofHawaii_Comments__c.field-meta.xml
<CustomField>
    <fullName>RegisteredinStateofHawaii_Comments__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>If they were registered in the State of Hawaii, when? Also, add additional comments here.</inlineHelpText>
    <label>Registered in State of Hawaii - Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>