force-app/main/default/objects/Filing__c/fields/RegisteredinStateofHawaiiComments__c.field-meta.xml
<CustomField>
    <fullName>RegisteredinStateofHawaiiComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Registered in State of Hawaii - Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>