force-app/main/default/objects/Filing__c/fields/RegisteredunderSecuritiesAct__c.field-meta.xml
<CustomField>
    <fullName>RegisteredunderSecuritiesAct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>See Note if Securities registered under Securities Act of 1933 (120 day requirement)</inlineHelpText>
    <label>Registered under Securities Act?</label>
    <type>Checkbox</type>
</CustomField>