force-app/main/default/objects/Filing__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <description>PacPoint - RA012319 - BREG Phase 1</description>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABANDONED</fullName>
            </value>
            <value>
                <fullName>APPRNT</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>APRSLTS</fullName>
            </value>
            <value>
                <fullName>DEFICIENT</fullName>
            </value>
            <value>
                <fullName>INACTIVE_PRINTS</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>SUSPENSION</fullName>
            </value>
            <value>
                <fullName>T_NOREG</fullName>
            </value>
            <value>
                <fullName>T_NOU5</fullName>
            </value>
            <value>
                <fullName>TEMPREG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>