force-app/main/default/objects/Filing__c/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <description>PacPoint-MV121219 - Created for BREG phase 1</description>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>