force-app/main/default/objects/Filing__c/fields/Requirednetcapitalof5k__c.field-meta.xml
<CustomField>
    <fullName>Requirednetcapitalof5k__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <inlineHelpText>Required net capital of $5000</inlineHelpText>
    <label>Required net capital of $5k</label>
    <type>Checkbox</type>
</CustomField>