force-app/main/default/objects/Filing__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-RA0101218 - Created for BREG phase 1</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Filings1</relationshipName>
    <type>Lookup</type>
</CustomField>