force-app/main/default/objects/Filing__c/fields/SalespersonhomestateComments__c.field-meta.xml
<CustomField>
    <fullName>SalespersonhomestateComments__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Add comments here.</inlineHelpText>
    <label>Salesperson home state - Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>