force-app/main/default/objects/Filing__c/fields/Salespersonhomestatelisted__c.field-meta.xml
<CustomField>
    <fullName>Salespersonhomestatelisted__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Is the salesperson home state listed with current registering firm?</inlineHelpText>
    <label>Salesperson home state listed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>