force-app/main/default/objects/Filing__c/fields/SecuritiesComments__c.field-meta.xml
<CustomField>
    <fullName>SecuritiesComments__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Securities Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>