force-app/main/default/objects/Filing__c/fields/SecuritiesCumulativeAmount__c.field-meta.xml
<CustomField>
    <fullName>SecuritiesCumulativeAmount__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Securities Cumulative Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>