force-app/main/default/objects/Filing__c/fields/SecuritiesType__c.field-meta.xml
<CustomField>
    <fullName>SecuritiesType__c</fullName>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>Securities Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>Equity (common or preferred)</fullName>
            </value>
            <value>
                <fullName>Convertible Security</fullName>
            </value>
            <value>
                <fullName>Partnership Interests</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>