force-app/main/default/objects/Filing__c/fields/SecuritiesTypeOther__c.field-meta.xml
<CustomField>
    <fullName>SecuritiesTypeOther__c</fullName>
    <description>PacPoint-IC100818 - Created for BREG phase 1</description>
    <label>Securities Type Other</label>
    <type>TextArea</type>
</CustomField>