force-app/main/default/objects/Filing__c/fields/Separatedisclosurestatement__c.field-meta.xml
<CustomField>
    <fullName>Separatedisclosurestatement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Separate disclosure statement (ADV-II)</inlineHelpText>
    <label>Separate disclosure statement</label>
    <type>Checkbox</type>
</CustomField>