force-app/main/default/objects/Filing__c/fields/Series65__c.field-meta.xml
<CustomField>
    <fullName>Series65__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Series 65</label>
    <type>Checkbox</type>
</CustomField>