force-app/main/default/objects/Filing__c/fields/Series766__c.field-meta.xml
<CustomField>
    <fullName>Series766__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Series 7 &amp; 66</label>
    <type>Checkbox</type>
</CustomField>