force-app/main/default/objects/Filing__c/fields/Settlementorfinalorder__c.field-meta.xml
<CustomField>
    <fullName>Settlementorfinalorder__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Was there a settlement or final order?</inlineHelpText>
    <label>Settlement or final order?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Final Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>