force-app/main/default/objects/Filing__c/fields/ShowGenericUploadButton__c.field-meta.xml
<CustomField>
    <fullName>ShowGenericUploadButton__c</fullName>
    <description>PacPoint-MV012819 - Created for BREG phase 1 to display the button on the community</description>
    <formula>IF(
   ISPICKVAL(Status__c,&quot;Deficiency Letter Sent&quot;) , 
   true, 
   false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Generic Upload Button</label>
    <type>Checkbox</type>
</CustomField>